Add text fixtures for integration tests in CI mode